@@ -74,6 +74,7 @@
 
 #if HAVE_GTKSPELL
 #include "gtkspell/gtkspell.h"
+#include <enchant/enchant.h>
 #else                           /* HAVE_GTKSPELL */
 #include "spell-check.h"
 #endif                          /* HAVE_GTKSPELL */
@@ -4324,6 +4325,9 @@ create_lang_menu(GtkWidget * parent, BalsaSendmsg * bsmsg)
     GtkWidget *langs = gtk_menu_new();
     static gboolean locales_sorted = FALSE;
     GSList *group = NULL;
+#if HAVE_GTKSPELL
+    EnchantBroker *broker;
+#endif                          /* HAVE_GTKSPELL */
 
     if (!locales_sorted) {
         for (i = 0; i < ELEMENTS(locales); i++)
@@ -4343,25 +4347,23 @@ create_lang_menu(GtkWidget * parent, BalsaSendmsg * bsmsg)
     selected_pos = find_locale_index_by_locale(setlocale(LC_CTYPE, NULL));
 #endif                          /* HAVE_GTKSPELL */
 
+#if HAVE_GTKSPELL
+    broker = enchant_broker_init();
+#endif                          /* HAVE_GTKSPELL */
+
     for (i = 0; i < ELEMENTS(locales); i++) {
 #if HAVE_GTKSPELL
-        GtkSpell *spell;
-
         if (locales[i].locale == NULL || locales[i].locale[0] == '\0')
             /* GtkSpell handles NULL lang, but complains about empty
              * lang; in either case, it does not go in the langs menu. */
             continue;
 
-        spell = gtkspell_new_attach(GTK_TEXT_VIEW(bsmsg->text),
-                                    locales[i].locale, NULL);
-        if (spell) {
+        if (enchant_broker_dict_exists(broker, locales[i].locale)) {
             GtkWidget *w;
 
             if (selected_pos < 0)
                 /* We did not find balsa_app.spell_check_lang. */
                 selected_pos = i;
-
-            gtkspell_detach(spell);
 
             w = gtk_radio_menu_item_new_with_mnemonic(group,
                                                       locales[i].
@@ -4394,6 +4396,9 @@ create_lang_menu(GtkWidget * parent, BalsaSendmsg * bsmsg)
         gtk_menu_shell_append(GTK_MENU_SHELL(langs), w);
 #endif                          /* HAVE_GTKSPELL */
     }
+#if HAVE_GTKSPELL
+    enchant_broker_free(broker);
+#endif                          /* HAVE_GTKSPELL */
     if (selected_pos >= 0)
         set_locale(bsmsg, selected_pos);
     gtk_menu_item_set_submenu(GTK_MENU_ITEM(parent), langs);
