@@ -1,3 +1,8 @@
+2009-12-30  Peter Bloomfield
+
+	* src/sendmsg-window.c (create_lang_menu): use
+	enchant_broker_dict_exists() to check languages.
+
 2009-12-29  Pawel Salek
 
 	* libbalsa/rfc3156.c:
